flux/istio/manifests/kiali-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-internal
  namespace: istio-system
spec:
  hostnames:
  - kiali.int.beansnet.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal-gateway
    namespace: istio-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kiali
      port: 20001
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: istio-system
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: kiali
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - {}
